--- a/src/main/resources/assets/travelersbackpack/lang/ko_kr.json
+++ b/src/main/resources/assets/travelersbackpack/lang/ko_kr.json
@@ -19,18 +19,18 @@
   "screen.travelersbackpack.empty": "비어 있음",
   "screen.travelersbackpack.empty_tank": "비우기",
   "screen.travelersbackpack.disabled_crafting": "조합이 비활성화되었습니다",
-  "screen.travelersbackpack.ability_enabled": "능력이 활성화되었습니다",
-  "screen.travelersbackpack.ability_disabled": "능력이 비활성화되었습니다",
-  "screen.travelersbackpack.ability_disabled_config": "Abilities disabled by config option",
-  "screen.travelersbackpack.ability_ready": "능력 준비",
+  "screen.travelersbackpack.ability_enabled": "기능이 활성화되었습니다",
+  "screen.travelersbackpack.ability_disabled": "기능이 비활성화되었습니다",
+  "screen.travelersbackpack.ability_disabled_config": "기능이 config option에 의해 비활성화되었습니다",
+  "screen.travelersbackpack.ability_ready": "기능 준비",
 
-  "screen.travelersbackpack.sort": "Sort items",
-  "screen.travelersbackpack.quick_stack": "Quick stack items",
-  "screen.travelersbackpack.transfer_to_backpack": "Transfer items to backpack",
-  "screen.travelersbackpack.transfer_to_player": "Transfer items to player inventory",
-  "screen.travelersbackpack.sort_shift": "Hold shift: Enter select mode and choose which slots won't be affected by sorting",
-  "screen.travelersbackpack.quick_stack_shift": "Hold shift: Quick stacks items from hotbar too",
-  "screen.travelersbackpack.transfer_to_backpack_shift": "Hold shift: Moves items from hotbar too",
+  "screen.travelersbackpack.sort": "아이템 정렬",
+  "screen.travelersbackpack.quick_stack": "빠른 아이템 쌓기",
+  "screen.travelersbackpack.transfer_to_backpack": "배낭으로 아이템 옮기기",
+  "screen.travelersbackpack.transfer_to_player": "인벤토리로 아이템 옮기기",
+  "screen.travelersbackpack.sort_shift": "Hold shift: 선택 모드로 들어가 정렬하지 않을 슬롯을 선택합니다",
+  "screen.travelersbackpack.quick_stack_shift": "Hold shift: 핫바에서도 빠른 아이템 쌓기",
+  "screen.travelersbackpack.transfer_to_backpack_shift": "Hold shift: 핫바에서도 아이템 이동하기",
 
   "obtain.travelersbackpack.bat": "폐광과 던전 상자에서 획득 가능",
   "obtain.travelersbackpack.iron_golem": "마을 대장간 상자에서 획득 가능",
@@ -51,29 +51,29 @@
   "ability.travelersbackpack.bookshelf": "대단한 지식이 담겨 있으며, 책장처럼 마법 부여대 주변에 배치하여 더 높은 등급의 마법을 부여할 수 있습니다!",
   "ability.travelersbackpack.sponge": "스펀지 블록처럼 동작하며 배낭 탱크에 물을 저장합니다. 능력을 사용하려면 비어 있거나 물이 완전히 채워진 상태가 아닌 탱크가 있어야 합니다.",
 
-  "ability.travelersbackpack.cake": "Feeds you slowly with delicious pieces of cake",
+  "ability.travelersbackpack.cake": "천천히 케이크를 먹어 허기를 회복시킵니다",
 
   "ability.travelersbackpack.cactus": "선인장처럼 동작합니다. 비가 오는데 배낭 위는 맑은 하늘이라면, 시간이 지나면 배낭에 있는 빈 탱크에 물이 채워집니다. 더 많은 물을 얻으려면 몸을 물로 적시세요! 배낭은 블록이지만 물을 채울 수 있습니다.",
   "ability.travelersbackpack.melon": "Can drop up to 3 melon slices when harvested",
-  "ability.travelersbackpack.pumpkin": "Staring at the enderman no longer makes him angry",
+  "ability.travelersbackpack.pumpkin": "아무리 노려봐도 엔더맨이 당신에게 화를 내지 않습니다.",
 
   "ability.travelersbackpack.creeper": "플레이어가 죽기 직전에 주변에 있는 모든 생물에게 피해를 주는 폭발을 일으킵니다. 플레이어에겐 흡수, 재생, 화염 보호 효과가 부여됩니다. 능력은 매 몇 분마다 사용 가능합니다.",
   "ability.travelersbackpack.dragon": "진정한 전사를 위한 배낭입니다. 마그마 큐브와 오징어 배낭의 능력이 합쳐집니다. 또한, 사용자에게 힘과 재생 능력을 제공합니다! 사용자는 무적입니다!... 하지만.. 만드는 데 얼마나 들었지?",
-  "ability.travelersbackpack.enderman": "Extends range distance by 1 block",
-  "ability.travelersbackpack.blaze": "Immunity to fall damage and small fireballs sent by blaze",
-  "ability.travelersbackpack.ghast": "Ghasts see you as an allay, unless you attack them",
+  "ability.travelersbackpack.enderman": "블록 설치/파괴 범위를 1블록 늘려줍니다",
+  "ability.travelersbackpack.blaze": "낙하 피해와 블레이즈 화염구에 피해를 입지 않습니다",
+  "ability.travelersbackpack.ghast": "가스트들이 플레이어를 먼저 공격하지 않게 됩니다",
   "ability.travelersbackpack.magma_cube": "화염 피해에 면역이 됩니다.",
-  "ability.travelersbackpack.spider": "Have you ever tried climbing walls?",
+  "ability.travelersbackpack.spider": "벽을 등반해 보신 적이 있습니까?",
   "ability.travelersbackpack.wither": "위더 효과에 면역이 됩니다.",
 
   "ability.travelersbackpack.bat": "어둠 속에서도 잘 볼 수 있습니다! 배트맨 배트맨 배트맨",
-  "ability.travelersbackpack.bee": "Attacking creatures stings them causing poisoning, which lasts 4 seconds",
+  "ability.travelersbackpack.bee": "공격한 생물이 4초간 독 효과를 얻습니다",
   "ability.travelersbackpack.ocelot": "근처에 적대적 몬스터가 있다면, 신속 효과를 얻습니다.",
-  "ability.travelersbackpack.cow": "Cleanses all negative effects",
+  "ability.travelersbackpack.cow": "모든 부정적인 효과를 정화합니다",
   "ability.travelersbackpack.chicken": "닭이 되고 싶었던 적이 있나요? 안된다고요? 자, 이제 당신은 될 수 있습니다! 알을 낳을 겁니다!",
   "ability.travelersbackpack.squid": "물 속에 있는 동안 수중 호흡 및 야간 투시 효과를 얻습니다.",
 
-  "fluid_type.travelersbackpack.potion": "Potion",
+  "fluid_type.travelersbackpack.potion": "물약",
 
   "block.travelersbackpack.travelers_backpack": "여행자의 배낭",
   "block.travelersbackpack.sleeping_bag": "침낭",
